; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/android/extr_utils.c_WindowHandler_NewSurfaceEnv.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/android/extr_utils.c_WindowHandler_NewSurfaceEnv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32 (%struct.TYPE_9__**, i32)*, i32 (%struct.TYPE_9__**, i32)* }

@CallObjectMethod = common dso_local global i32 0, align 4
@getVideoSurface = common dso_local global i32 0, align 4
@getSubtitlesSurface = common dso_local global i32 0, align 4
@getSurface = common dso_local global i32 0, align 4
@VLC_EGENERIC = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, %struct.TYPE_9__**, i32)* @WindowHandler_NewSurfaceEnv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @WindowHandler_NewSurfaceEnv(%struct.TYPE_10__* %0, %struct.TYPE_9__** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_9__**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store %struct.TYPE_9__** %1, %struct.TYPE_9__*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  switch i32 %9, label %22 [
    i32 128, label %10
    i32 130, label %14
    i32 129, label %18
  ]

10:                                               ; preds = %3
  %11 = load i32, i32* @CallObjectMethod, align 4
  %12 = load i32, i32* @getVideoSurface, align 4
  %13 = call i32 @JNI_ANWCALL(i32 %11, i32 %12)
  store i32 %13, i32* %8, align 4
  br label %22

14:                                               ; preds = %3
  %15 = load i32, i32* @CallObjectMethod, align 4
  %16 = load i32, i32* @getSubtitlesSurface, align 4
  %17 = call i32 @JNI_ANWCALL(i32 %15, i32 %16)
  store i32 %17, i32* %8, align 4
  br label %22

18:                                               ; preds = %3
  %19 = load i32, i32* @CallObjectMethod, align 4
  %20 = load i32, i32* @getSurface, align 4
  %21 = call i32 @JNI_STEXCALL(i32 %19, i32 %20)
  store i32 %21, i32* %8, align 4
  br label %22

22:                                               ; preds = %3, %18, %14, %10
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %26, i32* %4, align 4
  br label %50

27:                                               ; preds = %22
  %28 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %6, align 8
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 1
  %31 = load i32 (%struct.TYPE_9__**, i32)*, i32 (%struct.TYPE_9__**, i32)** %30, align 8
  %32 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %6, align 8
  %33 = load i32, i32* %8, align 4
  %34 = call i32 %31(%struct.TYPE_9__** %32, i32 %33)
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %36, align 8
  %38 = load i32, i32* %7, align 4
  %39 = zext i32 %38 to i64
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %37, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %40, i32 0, i32 0
  store i32 %34, i32* %41, align 4
  %42 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %6, align 8
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %43, i32 0, i32 0
  %45 = load i32 (%struct.TYPE_9__**, i32)*, i32 (%struct.TYPE_9__**, i32)** %44, align 8
  %46 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %6, align 8
  %47 = load i32, i32* %8, align 4
  %48 = call i32 %45(%struct.TYPE_9__** %46, i32 %47)
  %49 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %27, %25
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i32 @JNI_ANWCALL(i32, i32) #1

declare dso_local i32 @JNI_STEXCALL(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
